# PlasmicFeatGenome

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
bio-service/: Dockerfile  app.py  requirements.txt
bio-service/scripts/: foxp2_demo.py  foxp2_local_fasta.py
data/fasta/: FOXP2.fasta
llama-service/: Dockerfile  app.py  requirements.txt
src/: app.rs  lib.rs  main.rs  server.rs  state.rs
src/clients/: llama_client.rs  mod.rs
src/components/: foxp2.rs  mod.rs
src/pages/: home.rs  lab.rs  mod.rs
src/routes/: bio.rs
src/server/: bio.rs  health.rs  llama.rs  mod.rs
src/shared/: bio_types.rs  mod.rs
src/ui/: home.rs  labs.rs  mod.rs
