[package]
name = "plasmic_feat_genome"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["trace"] }
leptos = "0.6"
leptos_router = "0.6"
leptos_axum = { version = "0.6", optional = true }
axum = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5"


[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr"
]
hydrate = [
    "leptos/hydrate",
    "leptos_router/hydrate"
]

# ===== サーバー専用依存（WASMに絶対入らない）=====
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
leptos_axum = "0.6.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }

home = "0.5.11"
dirs = "5"

[package.metadata.leptos]
output-name = "plasmic_feat_genome"
site-root   = "target/site"
site-addr   = "0.0.0.0:3000"
reload-port = 3001
env         = "DEV"

# ★ これが超重要：cargo-leptos に「どのfeatureでビルドするか」を明示
bin-features = ["ssr"]
lib-features = ["hydrate"]

# bin-target は main.rs のバイナリ名
bin-target = "plasmic_feat_genome"

[lib]
crate-type = ["cdylib", "rlib"]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
