[package]
name = "plasmic_feat_genome"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# -------------------------
# 共通（WASM/SSRどちらでもOK）
# -------------------------
[dependencies]
leptos        = { version = "0.6", default-features = false, features = ["serde"] }
leptos_router = { version = "0.6", default-features = false }
leptos_config = "0.6"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# WASM 側のHTTPは reqwasm を使う（reqwestはWASMに入れない）
reqwasm = "0.5"

# -------------------------
# feature 設計（重要）
# -------------------------
[features]
# ★ここが超重要：default を ssr にしない
# cargo-leptos は wasm(lib) と ssr(bin) を両方ビルドするので、
# default=ssr にすると wasm 側にも ssr feature が乗りやすい。
default = ["hydrate"]

ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
]

hydrate = [
    "leptos/hydrate",
    "leptos_router/hydrate",
]

# -------------------------
# サーバー専用（非 wasm32）
# -------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum       = { version = "0.7.9", features = ["macros"] }
leptos_axum = "0.6.15"

tower      = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# サーバーでのみ reqwest を使う
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# DBもサーバー専用に閉じる（WASMに絶対入れない）
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres"
] }

home = "0.5.11"
dirs = "5"

[package.metadata.leptos]
output-name = "plasmic_feat_genome"
site-root   = "target/site"
site-addr   = "0.0.0.0:3000"
reload-port = 3001
env         = "DEV"

# ★ cargo-leptos に明示（あなたの意図通りでOK）
bin-features = ["ssr"]
lib-features = ["hydrate"]

bin-target = "plasmic_feat_genome"
